k8s/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: okotwica
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: api
