k8s/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: okotwica
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
