k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: okotwica
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /okotwica/*
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
